--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "eslint-config-next": "12.2.2",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6"
-  }
+  },
+  "engines": {
+  "node": "18.x"
+}
 }
